change z-index from 99 to 1, add more allowances to correct lyric submission

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ input {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: 1;
 }
 
 .modal {
